# python-client

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
jestor/: Client.py  File.py  Jestor.py  Table.py  User.py
jestor/exception/: ErrorApi.py  JestorApiException.py
jestor/filter/: Filter.py  Operators.py
src/sdk/: Client.py  File.py  Jestor.py  Table.py  User.py
src/sdk/Exception/: ErrorApi.py
